--- a/CRUDOpperationMongoDB1/CRUDOpperationMongoDB1.csproj
+++ b/CRUDOpperationMongoDB1/CRUDOpperationMongoDB1.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.6.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
