--- a/CRUDOpperationMongoDB1/CRUDOpperationMongoDB1.csproj
+++ b/CRUDOpperationMongoDB1/CRUDOpperationMongoDB1.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.6.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
